--- a/src/Community.RandomOrg/Resources/Strings.resx
+++ b/src/Community.RandomOrg/Resources/Strings.resx
@@ -219,6 +219,9 @@
   <data name="VerifySignature.DataIsNotSpecified" xml:space="preserve">
     <value>The random data is not specified</value>
   </data>
+  <data name="VerifySignature.RandomTypeIsInvalid" xml:space="preserve">
+    <value>The random type is invalid</value>
+  </data>
   <data name="VerifySignature.SerialNumberIsNotSpecified" xml:space="preserve">
     <value>The serial number is not specified</value>
   </data>
