Update NuGet dependencies

--- a/src/Community.RandomOrg/Resources/Strings.resx
+++ b/src/Community.RandomOrg/Resources/Strings.resx
@@ -117,118 +117,121 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Client.ApiKeyFormatIsInvalid" xml:space="preserve">
+  <data name="client.api_key.invalid_format" xml:space="preserve">
     <value>The format of API key is invalid</value>
   </data>
-  <data name="Client.ApiKeyIsRequired" xml:space="preserve">
+  <data name="client.api_key.required" xml:space="preserve">
     <value>An API key is required for the operation</value>
   </data>
-  <data name="GetResult.InvalidRandomDataType" xml:space="preserve">
-    <value>The type of random data is invalid</value>
-  </data>
-  <data name="Random.Blobs.CountIsInvalid" xml:space="preserve">
-    <value>The count must be within the [1,100] range</value>
-  </data>
-  <data name="Random.Blobs.SizeDivisionIsInvalid" xml:space="preserve">
-    <value>The size of each blob must be divisible by 8</value>
-  </data>
-  <data name="Random.Blobs.SizeIsInvalid" xml:space="preserve">
-    <value>The size of each blob must be within the [1,1048576] range</value>
-  </data>
-  <data name="Random.Blobs.TotalSizeIsInvalid" xml:space="preserve">
-    <value>The total size of all blobs must not exceed 1048576 bits</value>
-  </data>
-  <data name="Random.DecimalFractions.CountIsInvalid" xml:space="preserve">
-    <value>The count must be within the [1,1e4] range</value>
-  </data>
-  <data name="Random.DecimalFractions.DecimalPlacesIsInvalid" xml:space="preserve">
-    <value>The number of decimal places must be within the [1,20] range</value>
-  </data>
-  <data name="Random.Gaussians.CountIsInvalid" xml:space="preserve">
-    <value>The count must be within the [1,1e4] range</value>
-  </data>
-  <data name="Random.Gaussians.MeanIsInvalid" xml:space="preserve">
-    <value>The distribution's mean must be within the [-1e6,1e6] range</value>
-  </data>
-  <data name="Random.Gaussians.SignificantDigitsIsInvalid" xml:space="preserve">
-    <value>The number of significant digits must be within the [2,20] range</value>
-  </data>
-  <data name="Random.Gaussians.StandardDeviationIsInvalid" xml:space="preserve">
-    <value>The distribution's standard deviation must be within the [-1e6,1e6] range</value>
-  </data>
-  <data name="Random.Integers.CountIsInvalid" xml:space="preserve">
-    <value>The count must be within the [1,1e4] range</value>
-  </data>
-  <data name="Random.Integers.MaximumIsInvalid" xml:space="preserve">
-    <value>The upper boundary must be within the [-1e9,1e9] range</value>
-  </data>
-  <data name="Random.Integers.MinimumIsInvalid" xml:space="preserve">
-    <value>The lower boundary must be within the [-1e9,1e9] range</value>
-  </data>
-  <data name="Random.Strings.CharactersIsNotSpecified" xml:space="preserve">
-    <value>The set of characters is not specified</value>
-  </data>
-  <data name="Random.Strings.CharactersNumberIsInvalid" xml:space="preserve">
-    <value>The number of characters must be within the [1,80] range</value>
-  </data>
-  <data name="Random.Strings.CountIsInvalid" xml:space="preserve">
-    <value>The count must be within the [1,1e4] range</value>
-  </data>
-  <data name="Random.Strings.LengthIsInvalid" xml:space="preserve">
-    <value>The length of each string must be within the [1,20] range</value>
-  </data>
-  <data name="Random.Strings.ValueIsNotSpecified" xml:space="preserve">
-    <value>The string at position {0} is not specified</value>
-  </data>
-  <data name="Random.UserData.LengthIsInvalid" xml:space="preserve">
-    <value>The length of user data string must be within the [1,1e3] range</value>
-  </data>
-  <data name="Random.Uuids.CountIsInvalid" xml:space="preserve">
-    <value>The count must be within the [1,1e3] range</value>
-  </data>
-  <data name="Service.ApiKeyStatusIsInvalid" xml:space="preserve">
-    <value>The status of API key is invalid</value>
-  </data>
-  <data name="Service.ContentLengthIsInvalid" xml:space="preserve">
-    <value>The content length of service response is invalid</value>
-  </data>
-  <data name="Service.ContentLengthIsNotSpecified" xml:space="preserve">
-    <value>The content length of service response is not specified</value>
-  </data>
-  <data name="Service.ContentTypeIsInvalid" xml:space="preserve">
-    <value>The content type of service response is invalid</value>
-  </data>
-  <data name="Service.ContentTypeIsNotSpecified" xml:space="preserve">
-    <value>The content type of service response is not specified</value>
-  </data>
-  <data name="Service.HttpStatusCodeIsInvalid" xml:space="preserve">
-    <value>Response status code does not indicate success: {0} ({1})</value>
-  </data>
-  <data name="Service.MessageIdentifierIsInvalid" xml:space="preserve">
-    <value>The service message identifier is invalid</value>
-  </data>
-  <data name="VerifySignature.ApiKeyHashIsNotSpecified" xml:space="preserve">
+  <data name="client.verify.api_key_hash.not_specified" xml:space="preserve">
     <value>The hash of API key is not specified</value>
   </data>
-  <data name="VerifySignature.ApiKeyHashLengthIsInvalid" xml:space="preserve">
+  <data name="client.verify.api_key_hash.invalid_length" xml:space="preserve">
     <value>The hash of API key has invalid length</value>
   </data>
-  <data name="VerifySignature.CompletionTimeIsNotSpecified" xml:space="preserve">
+  <data name="client.verify.completion_time.not_specified" xml:space="preserve">
     <value>The completion time is not specified</value>
   </data>
-  <data name="VerifySignature.DataIsEmptySequence" xml:space="preserve">
+  <data name="client.verify.data.empty_sequence" xml:space="preserve">
     <value>The random data is empty sequence</value>
   </data>
-  <data name="VerifySignature.DataIsNotSpecified" xml:space="preserve">
+  <data name="client.verify.data.not_specified" xml:space="preserve">
     <value>The random data is not specified</value>
   </data>
-  <data name="VerifySignature.RandomTypeIsInvalid" xml:space="preserve">
+  <data name="client.verify.random.invalid_type" xml:space="preserve">
     <value>The random type is invalid</value>
   </data>
-  <data name="VerifySignature.SerialNumberIsNotSpecified" xml:space="preserve">
+  <data name="client.verify.serial_number.not_specified" xml:space="preserve">
     <value>The serial number is not specified</value>
   </data>
-  <data name="VerifySignature.SignatureLengthIsInvalid" xml:space="preserve">
+  <data name="client.verify.signature.invalid_length" xml:space="preserve">
     <value>The signature has invalid length</value>
+  </data>
+  <data name="protocol.content.length.invalid_value" xml:space="preserve">
+    <value>The content length of service response is invalid</value>
+  </data>
+  <data name="protocol.content.length.not_specified" xml:space="preserve">
+    <value>The content length of service response is not specified</value>
+  </data>
+  <data name="protocol.content.type.invalid_value" xml:space="preserve">
+    <value>The content type of service response is invalid</value>
+  </data>
+  <data name="protocol.content.type.not_specified" xml:space="preserve">
+    <value>The content type of service response is not specified</value>
+  </data>
+  <data name="protocol.http.status_code.invalid_value" xml:space="preserve">
+    <value>Response status code does not indicate success</value>
+  </data>
+  <data name="protocol.message.identifier.invalid_value" xml:space="preserve">
+    <value>The service message identifier is invalid</value>
+  </data>
+  <data name="protocol.message.invalid_value" xml:space="preserve">
+    <value>The service message is invalid</value>
+  </data>
+  <data name="protocol.response.content.invalid_structure" xml:space="preserve">
+    <value>The structure of service response is invalid</value>
+  </data>
+  <data name="random.blob.count.invalid_range" xml:space="preserve">
+    <value>The count must be within the [1,100] range</value>
+  </data>
+  <data name="random.blob.size.invalid_division" xml:space="preserve">
+    <value>The size of each blob must be divisible by 8</value>
+  </data>
+  <data name="random.blob.size.invalid_range" xml:space="preserve">
+    <value>The size of each blob must be within the [1,1048576] range</value>
+  </data>
+  <data name="random.blob.invalid_total_size" xml:space="preserve">
+    <value>The total size of all blobs must not exceed 1048576 bits</value>
+  </data>
+  <data name="random.decimal_fraction.count.invalid_range" xml:space="preserve">
+    <value>The count must be within the [1,1e4] range</value>
+  </data>
+  <data name="random.decimal_fraction.decimal_places.invalid_range" xml:space="preserve">
+    <value>The number of decimal places must be within the [1,20] range</value>
+  </data>
+  <data name="random.gaussian.count.invalid_range" xml:space="preserve">
+    <value>The count must be within the [1,1e4] range</value>
+  </data>
+  <data name="random.gaussian.mean.invalid_range" xml:space="preserve">
+    <value>The distribution's mean must be within the [-1e6,1e6] range</value>
+  </data>
+  <data name="random.gaussian.significant_digits.invalid_range" xml:space="preserve">
+    <value>The number of significant digits must be within the [2,20] range</value>
+  </data>
+  <data name="random.gaussian.standard_deviation.invalid_range" xml:space="preserve">
+    <value>The distribution's standard deviation must be within the [-1e6,1e6] range</value>
+  </data>
+  <data name="random.integer.count.invalid_range" xml:space="preserve">
+    <value>The count must be within the [1,1e4] range</value>
+  </data>
+  <data name="random.integer.lower_boundary.invalid_range" xml:space="preserve">
+    <value>The lower boundary must be within the [-1e9,1e9] range</value>
+  </data>
+  <data name="random.integer.upper_boundary.invalid_range" xml:space="preserve">
+    <value>The upper boundary must be within the [-1e9,1e9] range</value>
+  </data>
+  <data name="random.string.characters.length.invalid_range" xml:space="preserve">
+    <value>The number of characters must be within the [1,80] range</value>
+  </data>
+  <data name="random.string.characters.not_specified" xml:space="preserve">
+    <value>The set of characters is not specified</value>
+  </data>
+  <data name="random.string.count.invalid_range" xml:space="preserve">
+    <value>The count must be within the [1,1e4] range</value>
+  </data>
+  <data name="random.string.length.invalid_range" xml:space="preserve">
+    <value>The length of each string must be within the [1,20] range</value>
+  </data>
+  <data name="random.string.not_specified" xml:space="preserve">
+    <value>The string at position {0} is not specified</value>
+  </data>
+  <data name="random.user_data.length.invalid_range" xml:space="preserve">
+    <value>The length of user data string must be within the [1,1e3] range</value>
+  </data>
+  <data name="random.uuid.count.invalid_range" xml:space="preserve">
+    <value>The count must be within the [1,1e3] range</value>
+  </data>
+  <data name="service.api_key.invalid_status" xml:space="preserve">
+    <value>The status of API key is invalid</value>
   </data>
 </root>
