--- a/src/Community.RandomOrg/Resources/Strings.resx
+++ b/src/Community.RandomOrg/Resources/Strings.resx
@@ -117,9 +117,6 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="client.api_key.invalid_format" xml:space="preserve">
-    <value>The format of API key is invalid</value>
-  </data>
   <data name="client.verify.license.type.not_specified" xml:space="preserve">
     <value>The license type is null</value>
   </data>
@@ -128,6 +125,9 @@
   </data>
   <data name="client.verify.random.invalid_type" xml:space="preserve">
     <value>The random type is invalid</value>
+  </data>
+  <data name="json.invalid_json_string" xml:space="preserve">
+    <value>The JSON string for a value of the type {0} is invalid</value>
   </data>
   <data name="protocol.http.headers.invalid_values" xml:space="preserve">
     <value>The HTTP response has invalid JSON-RPC transport headers</value>
